# Pixelle-MCP

./: .gitignore  CLAUDE.md  README.md  README_CN.md  run.bat  run_with_proxy.sh
docs/: OSS_STORAGE_GUIDE.md
mcp-base/: pyproject.toml
mcp-base/config/: settings.py
mcp-base/storage/: __init__.py  oss_storage.py
mcp-client/: README_WebSocket.md  SIDEBAR_USAGE.md  api_endpoints.py  flask_websocket_server.py  main.py  pyproject.toml  run_websocket_server.py  start_cors_websocket.py  start_server.sh  start_websocket_only.py  test_cors.html  test_websocket_client.py
mcp-client/.chainlit/: config.toml
mcp-client/chat/: chat_handler.py  tool_sidebar.py
mcp-client/core/: prompt.py
mcp-client/public/: app.css  app.js  sidebar-manager.js
mcp-client/websocket_server/: README.md  __init__.py  api.py  cors_server.py  proxy_server.py  server.py
mcp-server/: core.py  pyproject.toml  test_minimax_integration.py
mcp-server/comfyui/: base_executor.py  workflow_parser.py
mcp-server/tools/: image_caption_tool.py  minimax_tools.py  workflow_manager_tool.py
mcp-server/utils/: minimax_client.py  oss_util.py
