[project]
name = "pixelle-mcp-client"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "boto3>=1.38.34",
    "chainlit>=2.6.2",
    "fastmcp>=2.7.1",
    "litellm>=1.75.5.post1",
    "openai>=1.84.0",
    "pyyaml>=6.0.2",
    "socksio>=1.0.0",
    "websockets>=12.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "flask-cors>=6.0.1",
]
