[project]
name = "pixelle-mcp-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "boto3>=1.38.34",
    "fastmcp>=2.7.1",
    "httpx>=0.28.1",
    "litellm>=1.76.0",
    "oss2>=2.19.1",
    "pillow>=11.2.1",
    "pydantic>=2.6.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "websockets>=12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
